--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,8 @@ services:
   - docker:dind
 
 build:
-  tags: docker
+  tags:
+  - docker
   script:
   - docker build -t checkstyle-ips .
   - docker push checkstyle-ips
