--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,14 +1,19 @@
 image: docker:git
+
 services:
   - docker:dind
 
-build:
+before_script:
+  - docker info
+
+build_image:
   tags:
   - docker
+
   script:
   - docker build -t ips1.ibr.cs.tu-bs.de:5005/programmieren-hiwis/checkstyle-ips .
-  - docker push ips1.ibr.cs.tu-bs.de:5005/programmieren-hiwis/checkstyle-ips
+  #- docker push ips1.ibr.cs.tu-bs.de:5005/programmieren-hiwis/checkstyle-ips
 
 test:
   script:
-    - Dummy Script
+  - docker run checkstyle-ips TestFile.java
