--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,12 +8,12 @@ build_image:
   - docker
 
   script:
-  - docker build -t ips1.ibr.cs.tu-bs.de:5005/programmieren-hiwis/checkstyle-ips:testing .
-  - docker push ips1.ibr.cs.tu-bs.de:5005/programmieren-hiwis/checkstyle-ips:testing
+  - docker build -t programmieren-hiwis/checkstyle-ips:testing .
+  - docker push programmieren-hiwis/checkstyle-ips:testing
 
 test_image:
   tags:
   - docker
 
   script:
-  - docker run ips1.ibr.cs.tu-bs.de:5005/programmieren-hiwis/checkstyle-ips:testing TestFile.java
+  - docker run programmieren-hiwis/checkstyle-ips:testing TestFile.java
