--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,11 +9,5 @@ build_image:
 
   script:
   - docker build -t programmieren-hiwis/checkstyle-ips:testing .
-  #- docker push programmieren-hiwis/checkstyle-ips:testing
-
-test_image:
-  tags:
-  - docker
-
-  script:
+  - docker push programmieren-hiwis/checkstyle-ips:testing
   - docker run programmieren-hiwis/checkstyle-ips:testing TestFile.java
