--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,5 @@ test:
   tags:
   - stylechecker
 
-  script:
-  - Dummy Script
-
+  #script:
+  #- java -jar checkstyle.jar -c tubs_checks.xml TestFile.java
