--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,8 @@ build_image:
   - docker
 
   script:
-  - docker build -t checkstyle-ips .
+  - docker build -t ips1.ibr.cs.tu-bs.de:5005/programmieren-hiwis/checkstyle-ips .
+  - docker push ips1.ibr.cs.tu-bs.de:5005/programmieren-hiwis/checkstyle-ips
 
 test:
   image: ips1.ibr.cs.tu-bs.de:5005/programmieren-hiwis/checkstyle-ips
@@ -18,3 +19,4 @@ test:
 
   script:
   - java -jar checkstyle.jar -c tubs_checks.xml TestFile.java
+  - ls
