--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,4 +18,4 @@ test:
   - stylechecker
   
   script:
-  - java -jar checkstyle.jar -c tubs_checks.xml *.java
+  - java -jar /checkstyle/checkstyle.jar -c /checkstyle/tubs_checks.xml *.java
