--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,4 +18,5 @@ test:
   - stylechecker
   
   script:
+  - ping google.de
   - java -jar /checkstyle/checkstyle.jar -c /checkstyle/tubs_checks.xml *.java
