Revert "Use localhost"
This reverts commit 705a4a74d8ffcf7cff441bfebe276d2acbed4894.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ build_image:
   - docker push ips1.ibr.cs.tu-bs.de:5005/programmieren-hiwis/checkstyle-ips
 
 test:
-  image: localhost:5005/programmieren-hiwis/checkstyle-ips
+  image: ips1.ibr.cs.tu-bs.de:5005/programmieren-hiwis/checkstyle-ips
 
   tags:
   - stylechecker
