Revert "Add build artefacts"
If job fails no artifacts are created

This reverts commit d1543a47ff518b730a62af6b61c3076c3101bf14.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,9 +18,4 @@ test:
   - stylechecker
   
   script:
-  - java -jar /checkstyle/checkstyle.jar -c /checkstyle/tubs_checks.xml -o out .
-
-  artifacts:
-    paths:
-    - out
-    expire_in: 1 week
+  - java -jar /checkstyle/checkstyle.jar -c /checkstyle/tubs_checks.xml *.java
