--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,8 +7,15 @@ build_image:
   tags:
   - docker
 
+  before_script:
+  - docker info
+
+  stage: build
+
   script:
-  - docker build -t ips1.ibr.cs.tu-bs.de:5005/abgabesystem/checkstyle .
+  - docker build -t checkstyle .
+  - docker run checkstyle
+  - docker tag checkstyle ips1.ibr.cs.tu-bs.de:5005/abgabesystem/checkstyle .
   - docker push ips1.ibr.cs.tu-bs.de:5005/abgabesystem/checkstyle
 
 test:
