--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ build_image:
   image: docker:latest
 
   variables:
-    CONTAINER_IMAGE: registry.gitlab.com/$CI_PROJECT_PATH
+    CONTAINER_IMAGE: ips1.ibr.cs.tu-bs.de:5005/$CI_PROJECT_PATH
     DOCKER_DRIVER: overlay2
 
   services:
