Revert "Remove tag"
This reverts commit 8f79aa2aa12e8871ba1f9b0f24070a86dd0f8e72.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,9 @@ build_image:
   services:
   - docker:dind
 
+  tags:
+  - docker
+
   before_script:
   - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN ips1.ibr.cs.tu-bs.de:5005
 
