Remove duplicate path

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,8 +8,8 @@ stages:
   - release
 
 variables:
-  CONTAINER_TEST_TAG: $CI_REGISTRY/abgabesystem/$CI_REGISTRY_IMAGE:$CI_COMMIT_REF_NAME
-  CONTAINER_RELEASE_TAG: $CI_REGISTRY/abgabesystem/$CI_REGISTRY_IMAGE:latest
+  CONTAINER_TEST_TAG: $$CI_REGISTRY_IMAGE:$CI_COMMIT_REF_NAME
+  CONTAINER_RELEASE_TAG: $CI_REGISTRY_IMAGE:latest
 
 before_script:
   - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
