--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,7 @@ before_script:
 build:
   stage: build
   tags:
-    - docker-builder
+    - docker
 
   script:
     - docker build --pull -t $CONTAINER_TEST_TAG .
@@ -26,7 +26,7 @@ build:
 test1:
   stage: test
   tags:
-    - docker-builder
+    - docker
     
   script:
     - docker pull $CONTAINER_TEST_TAG
@@ -39,7 +39,7 @@ release-image:
     - docker push $CONTAINER_RELEASE_TAG
     
   tags:
-    - docker-builder
+    - docker
     
   only:
     - master
